[gd_scene format=3 uid="uid://play001"]

[ext_resource type="Script" uid="uid://dsgsv8n7f6px0" path="res://scripts/play.gd" id="1_play"]
[ext_resource type="Texture2D" uid="uid://3tjnidxhieia" path="res://assets/images/ui/done_normal.png" id="2_done_normal"]
[ext_resource type="Texture2D" uid="uid://cvd2xm2hsuy8u" path="res://art/back2.png" id="4_1o7w5"]
[ext_resource type="Texture2D" uid="uid://bmsccityi0mk2" path="res://assets/images/ui/done_icon.png" id="4_done_icon"]
[ext_resource type="Texture2D" uid="uid://c7jidhwx716o" path="res://assets/images/ui/clear_normal.png" id="5_clear_normal"]
[ext_resource type="Texture2D" uid="uid://7s5onvs7mpsl" path="res://assets/images/ui/done_hover.png" id="6_j27tm"]
[ext_resource type="Texture2D" uid="uid://b2jul02moc7hn" path="res://assets/images/ui/clear_icon.png" id="7_clear_icon"]

[node name="Play" type="Control" unique_id=1500577705]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_play")

[node name="Background" type="ColorRect" parent="." unique_id=910585677]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.92, 0.95, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=898558694]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1487848765]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ColorPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=426933597]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 12

[node name="ColorLabel" type="Label" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=1637575001]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.4, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "üé® Paint Colors"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=1653389380]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2

[node name="PresetLabel" type="Label" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=1265441666]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "üíï Quick Colors"

[node name="ColorPresets" type="GridContainer" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=342136936]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4

[node name="BrushLabel" type="Label" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=2082313631]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "üñåÔ∏è Brush: 15"

[node name="BrushSlider" type="HSlider" parent="MarginContainer/HBoxContainer/ColorPanel" unique_id=1783259325]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
min_value = 5.0
max_value = 40.0
value = 15.0

[node name="CenterPanel" type="CenterContainer" parent="MarginContainer/HBoxContainer" unique_id=2102996995]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaskCanvas" type="SubViewportContainer" parent="MarginContainer/HBoxContainer/CenterPanel" unique_id=1059391995]
custom_minimum_size = Vector2(750, 500)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="MarginContainer/HBoxContainer/CenterPanel/MaskCanvas" unique_id=497315969]
transparent_bg = true
handle_input_locally = false
size = Vector2i(750, 500)
render_target_update_mode = 4

[node name="MaskRoot" type="Control" parent="MarginContainer/HBoxContainer/CenterPanel/MaskCanvas/SubViewport" unique_id=1135587269]
custom_minimum_size = Vector2(350, 449)
layout_mode = 3
anchors_preset = 0
offset_left = 200.0
offset_top = 25.0
offset_right = 550.0
offset_bottom = 474.0

[node name="PaintTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterPanel/MaskCanvas/SubViewport/MaskRoot" unique_id=260657588]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="MaskTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterPanel/MaskCanvas/SubViewport/MaskRoot" unique_id=186875608]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DecorationsContainer" type="Node2D" parent="MarginContainer/HBoxContainer/CenterPanel/MaskCanvas/SubViewport/MaskRoot" unique_id=2146847478]
z_index = 10

[node name="DecorationsPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=386713906]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="DecorLabel" type="Label" parent="MarginContainer/HBoxContainer/DecorationsPanel" unique_id=147944224]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.4, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "‚ú® Decorations ‚ú®"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/DecorationsPanel" unique_id=304232089]
custom_minimum_size = Vector2(180, 400)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DecorGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/DecorationsPanel/ScrollContainer" unique_id=1540948554]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="BottomBar" type="HBoxContainer" parent="." unique_id=1893450169]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ClearButtonContainer" type="HBoxContainer" parent="BottomBar" unique_id=2006693530]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ClearIcon" type="TextureRect" parent="BottomBar/ClearButtonContainer" unique_id=1284549124]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture = ExtResource("7_clear_icon")
expand_mode = 1
stretch_mode = 5

[node name="ClearButton" type="TextureButton" parent="BottomBar/ClearButtonContainer" unique_id=1978884525]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
texture_normal = ExtResource("5_clear_normal")
texture_hover = ExtResource("4_1o7w5")
ignore_texture_size = true
stretch_mode = 5

[node name="Spacer" type="Control" parent="BottomBar" unique_id=1654515956]
layout_mode = 2
size_flags_horizontal = 3

[node name="DoneButtonContainer" type="HBoxContainer" parent="BottomBar" unique_id=1668031471]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DoneIcon" type="TextureRect" parent="BottomBar/DoneButtonContainer" unique_id=2129996964]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture = ExtResource("4_done_icon")
expand_mode = 1
stretch_mode = 5

[node name="DoneButton" type="TextureButton" parent="BottomBar/DoneButtonContainer" unique_id=2104685991]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
texture_normal = ExtResource("2_done_normal")
texture_hover = ExtResource("6_j27tm")
ignore_texture_size = true
stretch_mode = 5
